@@ -1,5 +1,6 @@
 Build.PL
 Changes
+examples/statistical-analysis.pl
 inc/Test/Run/Builder.pm
 lib/Statistics/Descriptive.pm
 Makefile.PL
