@@ -4,6 +4,7 @@ Revision history for Perl extension Statistics::Descriptive.
         - standard_deviation failing due to a variance that got evaluated
         to 0 due to rounding errors.
     - Kwalitee : added a LICENSE section to the POD.
+    - Kwalitee (CPANTS) : added an examples/ directory with a script.
 
 2.8   May 09, 2009
 
